fix comment highlight contrast

--- a/src/article/highlight.scss
+++ b/src/article/highlight.scss
@@ -98,6 +98,10 @@
         color: var(--shiki-dark);
         background-color: transparent;
       }
+
+      [style*="--shiki-dark:#545454;"][class] {
+        color: var(--shiki-light)
+      }
     }
   }
 }
